fix(reports_controller.rb): remove unused variable 'results' in get_sdr_array method feat(reports_controller.rb): add rd_receipt_register method to generate yearly receipt register for regular donations fix(routes.rb): add route for rd_receipt_register method in reports controller fix(reports_spec.rb): comment out unused variable 'data' in regular_donation_yearly_receipt test feat(swagger.yaml): add documentation for rd_receipt_register endpoint in reports API
